<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_close_24"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_close"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:text="@string/join_with_code"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/purple_700"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/join"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_enter_the_join_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/rl_title"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/enter_the_join_code"/>
    <EditText
        android:id="@+id/edit_join_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:imeOptions="actionDone"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_the_join_code"
        android:hint="@string/example_abc_xyz"
        />

</androidx.constraintlayout.widget.ConstraintLayout>