<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/contact_name_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttons_call_container"
        android:textSize="24sp"
        android:layout_margin="@dimen/_10sdp"/>
    <ImageView
        android:id="@+id/iv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_10sdp"
        android:layout_toRightOf="@id/contact_name_call"
        android:layout_above="@+id/buttons_call_container"
        android:src="@drawable/ic_baseline_share_24"/>


    <LinearLayout
           android:id="@+id/buttons_call_container"
           android:orientation="horizontal"
           android:layout_alignParentBottom="true"
           android:layout_alignWithParentIfMissing="true"
           android:layout_marginBottom="32dp"
           android:layout_centerHorizontal="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

       <ImageButton
           android:id="@+id/button_call_disconnect"
           android:background="@drawable/ic_phone_call"
           android:contentDescription="@string/disconnect_call"
           android:layout_marginEnd="@dimen/_16sdp"
           android:layout_width="48dp"
           android:layout_height="48dp"/>

       <ImageButton
           android:id="@+id/button_call_switch_camera"
           android:background="@drawable/ic_baseline_cameraswitch_24"
           android:contentDescription="@string/switch_camera"
           android:layout_marginEnd="@dimen/_8sdp"
           android:layout_width="@dimen/_40sdp"
           android:layout_height="@dimen/_40sdp"/>

        <ImageButton
           android:id="@+id/button_call_scaling_mode"
           android:background="@drawable/ic_action_return_from_full_screen"
           android:contentDescription="@string/disconnect_call"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"/>

       <ImageButton
           android:id="@+id/button_call_toggle_mic"
           android:background="@android:drawable/ic_btn_speak_now"
           android:contentDescription="@string/toggle_mic"
           android:layout_marginEnd="@dimen/_8sdp"
           android:layout_width="@dimen/_40sdp"
           android:layout_height="@dimen/_40sdp"/>
    </LinearLayout>

</RelativeLayout>
